@@ -1185,6 +1185,14 @@ mg_limit_entry_cb (GtkWidget * igad, gpointer userdata)
 }
 
 static void
+mg_apply_entry_style (GtkWidget *entry)
+{
+	gtk_widget_modify_base (entry, GTK_STATE_NORMAL, &colors[19]);
+	gtk_widget_modify_text (entry, GTK_STATE_NORMAL, &colors[18]);
+	gtk_widget_modify_font (entry, input_style->font_desc);
+}
+
+static void
 mg_create_chanmodebuttons (session_gui *gui, GtkWidget *box)
 {
 	if (!prefs.chanmodebuttons)
@@ -1203,19 +1211,27 @@ mg_create_chanmodebuttons (session_gui *gui, GtkWidget *box)
 
 	gui->flag_k = mg_create_flagbutton (_("Keyword"), box, "K");
 	gui->key_entry = gtk_entry_new ();
+	gtk_widget_set_name (gui->key_entry, "xchat-inputbox");
 	gtk_entry_set_max_length (GTK_ENTRY (gui->key_entry), 16);
 	gtk_widget_set_size_request (gui->key_entry, 30, -1);
 	gtk_box_pack_start (GTK_BOX (box), gui->key_entry, 0, 0, 0);
 	g_signal_connect (G_OBJECT (gui->key_entry), "activate",
 							G_CALLBACK (mg_key_entry_cb), NULL);
 
+	if (prefs.style_inputbox)
+		mg_apply_entry_style (gui->key_entry);
+
 	gui->flag_l = mg_create_flagbutton (_("User Limit"), box, "L");
 	gui->limit_entry = gtk_entry_new ();
+	gtk_widget_set_name (gui->limit_entry, "xchat-inputbox");
 	gtk_entry_set_max_length (GTK_ENTRY (gui->limit_entry), 10);
 	gtk_widget_set_size_request (gui->limit_entry, 30, -1);
 	gtk_box_pack_start (GTK_BOX (box), gui->limit_entry, 0, 0, 0);
 	g_signal_connect (G_OBJECT (gui->limit_entry), "activate",
 							G_CALLBACK (mg_limit_entry_cb), NULL);
+
+	if (prefs.style_inputbox)
+		mg_apply_entry_style (gui->limit_entry);
 }
 
 static void
@@ -1289,9 +1305,13 @@ mg_create_topicbar (session *sess, GtkWidget *box, char *name)
 	}
 
 	gui->topic_entry = topic = gtk_entry_new ();
+	gtk_widget_set_name (topic, "xchat-inputbox");
 	gtk_container_add (GTK_CONTAINER (hbox), topic);
 	g_signal_connect (G_OBJECT (topic), "activate",
 							G_CALLBACK (mg_topic_cb), 0);
+
+	if (prefs.style_inputbox)
+		mg_apply_entry_style (topic);
 
 	gui->topicbutton_box = bbox = gtk_hbox_new (FALSE, 0);
 	gtk_box_pack_start (GTK_BOX (hbox), bbox, 0, 0, 0);
@@ -1730,7 +1750,7 @@ mg_create_entry (session *sess, GtkWidget *box)
 	gtk_widget_grab_focus (entry);
 
 	if (prefs.style_inputbox)
-		gtk_widget_set_style (entry, input_style);
+		mg_apply_entry_style (entry);
 
 	but = gtkutil_button (hbox, GTK_STOCK_GO_UP, _("Channel Options"),
 								 mg_upbutton_cb, 0, 0);
