@@ -22,7 +22,9 @@
    a detach.
  - New default icon again, this one scales better (Dagmar d'Surreal).
  - Send /LIST args on galaxynet.
- -  
+ - Added settings to change inputbox and userlist styles to the same
+   as the main text area.
+ - 
  - 
 
 
